--- a/index.html
+++ b/index.html
@@ -1,68 +1,166 @@
-function formatNumber(num) {
-    return num.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Rent vs Buy Calculator | Chris Garrard Realty</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            max-width: 900px;
+            margin: auto;
+            background-color: #f7f7f7;
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+            color: #2c3e50;
+        }
+        label {
+            display: block;
+            margin-top: 15px;
+            font-weight: bold;
+        }
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
+        .results {
+            margin-top: 30px;
+            padding: 15px;
+            background: #fff;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .results strong {
+            color: #2980b9;
+        }
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 14px;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
 
-function calculate() {
-    const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
+    <h1>Rent vs Buy Calculator</h1>
+    <p style="text-align:center;">Helping Families Make Smart Financial Decisions About Homeownership</p>
 
-    const homePrice = getValue('homePrice');
-    const downPaymentPercent = getValue('downPayment');
-    const interestRateMonthly = getValue('interestRate') / 100 / 12;
-    const loanTermMonths = getValue('loanTerm') * 12;
-    const propertyTaxesPercent = getValue('propertyTaxes') / 100;
-    const insurance = getValue('insurance');
-    const growthRate = getValue('growthRate') / 100;
-    let monthlyRent = getValue('monthlyRent');
-    const rentIncrease = getValue('rentIncrease') / 100;
-    const years = getValue('years');
-    const annualStockReturn = 0.07; // 7% average stock return
-    const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
+    <label>Home Purchase Price ($):</label>
+    <input type="number" id="homePrice" value="300000">
 
-    const downPayment = homePrice * (downPaymentPercent / 100);
-    const loanAmount = homePrice - downPayment;
-    const monthlyPayment = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
+    <label>Down Payment (%):</label>
+    <input type="number" id="downPayment" value="5">
 
-    let totalBuyCost = downPayment;
-    let totalRentCost = 0;
-    let homeValue = homePrice;
-    let monthlyDifference = 0;
-    let futureStockValue = 0;
+    <label>Loan Interest Rate (%):</label>
+    <input type="number" id="interestRate" value="6.5">
 
-    for (let i = 1; i <= years; i++) {
-        const yearlyMortgage = monthlyPayment * 12;
-        const yearlyTaxes = propertyTaxesPercent * homeValue;
-        const yearlyMaintenance = 0.015 * homeValue;
-        totalBuyCost += yearlyMortgage + yearlyTaxes + insurance + yearlyMaintenance;
+    <label>Loan Term (years):</label>
+    <input type="number" id="loanTerm" value="30">
 
-        homeValue *= (1 + growthRate);
-        totalRentCost += monthlyRent * 12;
-        monthlyRent *= (1 + rentIncrease);
-    }
+    <label>Annual Property Taxes (% of home value):</label>
+    <input type="number" id="propertyTaxes" value="0.5">
 
-    const averageAnnualRent = totalRentCost / years;
-    const averageMonthlyRent = averageAnnualRent / 12;
-    const equity = homeValue - loanAmount;
-    const netGain = equity - (totalBuyCost - equity);
+    <label>Annual Home Insurance ($):</label>
+    <input type="number" id="insurance" value="1500">
 
-    // Monthly difference between rent and mortgage
-    monthlyDifference = averageMonthlyRent - monthlyPayment;
+    <label>Annual Property Value Growth (%):</label>
+    <input type="number" id="growthRate" value="2">
 
-    // Stock return simulation
-    for (let m = 0; m < years * 12; m++) {
-        futureStockValue = (futureStockValue + (monthlyDifference > 0 ? monthlyDifference : 0)) * (1 + stockReturnMonthly);
-    }
+    <label>Monthly Rent ($):</label>
+    <input type="number" id="monthlyRent" value="1600">
 
-    document.getElementById('results').innerHTML = `
-        <strong>Renting Total Cost:</strong> $${formatNumber(totalRentCost)}<br>
-        <strong>Buying Would Gain You:</strong> $${formatNumber(equity)}<br>
-        <strong>Net Difference:</strong> $${formatNumber(Math.abs(equity - totalRentCost))} ${equity > totalRentCost ? 'better to Buy' : 'better to Rent'}<br><br>
-        
-        <strong>Monthly Rent:</strong> $${formatNumber(averageMonthlyRent)}<br>
-        <strong>Estimated Mortgage Payment:</strong> $${formatNumber(monthlyPayment)}<br>
-        <strong>Monthly Difference (Rent - Mortgage):</strong> $${formatNumber(monthlyDifference)}<br><br>
+    <label>Annual Rent Increase (%):</label>
+    <input type="number" id="rentIncrease" value="3">
 
-        If you invested $${formatNumber(monthlyDifference)} per month at 7% annual return,<br>
-        you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.
-    `;
-}
+    <label>Years to Compare:</label>
+    <input type="number" id="years" value="5">
+
+    <div class="results" id="results"></div>
+
+    <footer>
+        Chris Garrard | Veteran-Owned Real Estate
+    </footer>
+
+    <script>
+        function formatNumber(num) {
+            return num.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+        }
+
+        function calculate() {
+            const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
+
+            const homePrice = getValue('homePrice');
+            const downPaymentPercent = getValue('downPayment');
+            const interestRateMonthly = getValue('interestRate') / 100 / 12;
+            const loanTermMonths = getValue('loanTerm') * 12;
+            const propertyTaxesPercent = getValue('propertyTaxes') / 100;
+            const insurance = getValue('insurance');
+            const growthRate = getValue('growthRate') / 100;
+            let monthlyRent = getValue('monthlyRent');
+            const rentIncrease = getValue('rentIncrease') / 100;
+            const years = getValue('years');
+            const annualStockReturn = 0.07; // 7% average stock return
+            const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
+
+            const downPayment = homePrice * (downPaymentPercent / 100);
+            const loanAmount = homePrice - downPayment;
+            const monthlyPayment = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
+
+            let totalBuyCost = downPayment;
+            let totalRentCost = 0;
+            let homeValue = homePrice;
+            let monthlyDifference = 0;
+            let futureStockValue = 0;
+
+            for (let i = 1; i <= years; i++) {
+                const yearlyMortgage = monthlyPayment * 12;
+                const yearlyTaxes = propertyTaxesPercent * homeValue;
+                const yearlyMaintenance = 0.015 * homeValue;
+                totalBuyCost += yearlyMortgage + yearlyTaxes + insurance + yearlyMaintenance;
+
+                homeValue *= (1 + growthRate);
+                totalRentCost += monthlyRent * 12;
+                monthlyRent *= (1 + rentIncrease);
+            }
+
+            const averageAnnualRent = totalRentCost / years;
+            const averageMonthlyRent = averageAnnualRent / 12;
+            const equity = homeValue - loanAmount;
+            const netDifference = equity - totalRentCost;
+
+            monthlyDifference = averageMonthlyRent - monthlyPayment;
+
+            for (let m = 0; m < years * 12; m++) {
+                futureStockValue = (futureStockValue + (monthlyDifference > 0 ? monthlyDifference : 0)) * (1 + stockReturnMonthly);
+            }
+
+            document.getElementById('results').innerHTML = `
+                <strong>Renting Total Cost:</strong> $${formatNumber(totalRentCost)}<br>
+                <strong>Buying Would Gain You:</strong> $${formatNumber(equity)}<br>
+                <strong>Net Difference:</strong> $${formatNumber(Math.abs(netDifference))} ${netDifference > 0 ? 'better to Buy' : 'better to Rent'}<br><br>
+                
+                <strong>Monthly Rent:</strong> $${formatNumber(averageMonthlyRent)}<br>
+                <strong>Estimated Mortgage Payment:</strong> $${formatNumber(monthlyPayment)}<br>
+                <strong>Monthly Difference (Rent - Mortgage):</strong> $${formatNumber(monthlyDifference)}<br><br>
+
+                If you invested $${formatNumber(monthlyDifference)} per month at 7% annual return,<br>
+                you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.
+            `;
+        }
+
+        // Auto calculate on load and when inputs change
+        document.querySelectorAll('input').forEach(input => {
+            input.addEventListener('input', calculate);
+        });
+        window.onload = calculate;
+    </script>
+
+</body>
+</html>
 
