--- a/index.html
+++ b/index.html
@@ -88,79 +88,84 @@
     </footer>
 
     <script>
-        function formatNumber(num) {
-            return num.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+     function formatNumber(num) {
+    return num.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+}
+
+function calculate() {
+    const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
+
+    const homePrice = getValue('homePrice');
+    const downPaymentPercent = getValue('downPayment');
+    const interestRateMonthly = getValue('interestRate') / 100 / 12;
+    const loanTermMonths = getValue('loanTerm') * 12;
+    const insurance = getValue('insurance');
+    const taxType = document.getElementById('taxType').value;
+    const growthRate = getValue('growthRate') / 100;
+    let monthlyRent = getValue('monthlyRent');
+    const rentIncrease = getValue('rentIncrease') / 100;
+    const years = getValue('years');
+    const annualStockReturn = 0.07;
+    const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
+
+    const downPayment = homePrice * (downPaymentPercent / 100);
+    const loanAmount = homePrice - downPayment;
+    const monthlyPayment = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
+
+    let totalBuyCost = downPayment;
+    let totalRentCost = 0;
+    let homeValue = homePrice;
+    let monthlyDifference = 0;
+    let futureStockValue = 0;
+
+    for (let i = 1; i <= years; i++) {
+        const yearlyMortgage = monthlyPayment * 12;
+
+        let yearlyTaxes = 0;
+        if (taxType === 'percent') {
+            yearlyTaxes = (getValue('propertyTaxes') / 100) * homeValue;
+        } else {
+            yearlyTaxes = getValue('propertyTaxes');
         }
 
-        function calculate() {
-            const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
+        const yearlyMaintenance = 0.015 * homeValue;
+        totalBuyCost += yearlyMortgage + yearlyTaxes + insurance + yearlyMaintenance;
 
-            const homePrice = getValue('homePrice');
-            const downPaymentPercent = getValue('downPayment');
-            const interestRateMonthly = getValue('interestRate') / 100 / 12;
-            const loanTermMonths = getValue('loanTerm') * 12;
-            const propertyTaxesPercent = getValue('propertyTaxes') / 100;
-            const insurance = getValue('insurance');
-            const growthRate = getValue('growthRate') / 100;
-            let monthlyRent = getValue('monthlyRent');
-            const rentIncrease = getValue('rentIncrease') / 100;
-            const years = getValue('years');
-            const annualStockReturn = 0.07; // 7% average stock return
-            const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
+        homeValue *= (1 + growthRate);
+        totalRentCost += monthlyRent * 12;
+        monthlyRent *= (1 + rentIncrease);
+    }
 
-            const downPayment = homePrice * (downPaymentPercent / 100);
-            const loanAmount = homePrice - downPayment;
-            const monthlyPayment = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
+    const averageAnnualRent = totalRentCost / years;
+    const averageMonthlyRent = averageAnnualRent / 12;
+    const equity = homeValue - loanAmount;
+    const netDifference = equity - totalRentCost;
 
-            let totalBuyCost = downPayment;
-            let totalRentCost = 0;
-            let homeValue = homePrice;
-            let monthlyDifference = 0;
-            let futureStockValue = 0;
+    monthlyDifference = monthlyPayment - averageMonthlyRent; // Flip logic: what you'd save by renting
 
-            for (let i = 1; i <= years; i++) {
-                const yearlyMortgage = monthlyPayment * 12;
-                const yearlyTaxes = propertyTaxesPercent * homeValue;
-                const yearlyMaintenance = 0.015 * homeValue;
-                totalBuyCost += yearlyMortgage + yearlyTaxes + insurance + yearlyMaintenance;
-
-                homeValue *= (1 + growthRate);
-                totalRentCost += monthlyRent * 12;
-                monthlyRent *= (1 + rentIncrease);
-            }
-
-            const averageAnnualRent = totalRentCost / years;
-            const averageMonthlyRent = averageAnnualRent / 12;
-            const equity = homeValue - loanAmount;
-            const netDifference = equity - totalRentCost;
-
-            monthlyDifference = averageMonthlyRent - monthlyPayment;
-
-            for (let m = 0; m < years * 12; m++) {
-                futureStockValue = (futureStockValue + (monthlyDifference > 0 ? monthlyDifference : 0)) * (1 + stockReturnMonthly);
-            }
-
-            document.getElementById('results').innerHTML = `
-                <strong>Renting Total Cost:</strong> $${formatNumber(totalRentCost)}<br>
-                <strong>Buying Would Gain You:</strong> $${formatNumber(equity)}<br>
-                <strong>Net Difference:</strong> $${formatNumber(Math.abs(netDifference))} ${netDifference > 0 ? 'better to Buy' : 'better to Rent'}<br><br>
-                
-                <strong>Monthly Rent:</strong> $${formatNumber(averageMonthlyRent)}<br>
-                <strong>Estimated Mortgage Payment:</strong> $${formatNumber(monthlyPayment)}<br>
-                <strong>Monthly Difference (Rent - Mortgage):</strong> $${formatNumber(monthlyDifference)}<br><br>
-
-                If you invested $${formatNumber(monthlyDifference)} per month at 7% annual return,<br>
-                you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.
-            `;
+    // Stock return simulation: only invest if renting is cheaper
+    if (monthlyDifference > 0) {
+        for (let m = 0; m < years * 12; m++) {
+            futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
         }
+    }
 
-        // Auto calculate on load and when inputs change
-        document.querySelectorAll('input').forEach(input => {
-            input.addEventListener('input', calculate);
-        });
-        window.onload = calculate;
-    </script>
+    document.getElementById('results').innerHTML = `
+        <strong>Renting Total Cost:</strong> $${formatNumber(totalRentCost)}<br>
+        <strong>Buying Would Gain You:</strong> $${formatNumber(equity)}<br>
+        <strong>Net Difference:</strong> $${formatNumber(Math.abs(netDifference))} ${netDifference > 0 ? 'better to Buy' : 'better to Rent'}<br><br>
+        
+        <strong>Monthly Rent:</strong> $${formatNumber(averageMonthlyRent)}<br>
+        <strong>Estimated Mortgage Payment:</strong> $${formatNumber(monthlyPayment)}<br>
+        <strong>Monthly Difference (Mortgage - Rent):</strong> $${formatNumber(monthlyDifference)}<br><br>
 
-</body>
+        If you rented and invested $${formatNumber(monthlyDifference)} per month at 7% annual return,<br>
+        you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.
+    `;
+}
+
+document.querySelectorAll('input, select').forEach(el => {
+    el.addEventListener('input', calculate);
+});
+window.onload = calculate;
 </html>
-
