--- a/index.html
+++ b/index.html
@@ -63,8 +63,13 @@
     <label>Loan Term (years):</label>
     <input type="number" id="loanTerm" value="30">
 
-    <label>Annual Property Taxes (% of home value):</label>
-    <input type="number" id="propertyTaxes" value="0.5">
+    <label>Annual Property Taxes:</label>
+<input type="number" id="propertyTaxes" value="0.5">
+<select id="taxType">
+    <option value="percent">Percent of Home Value (%)</option>
+    <option value="fixed">Fixed Amount ($)</option>
+</select>
+
 
     <label>Annual Home Insurance ($):</label>
     <input type="number" id="insurance" value="1500">
