--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             const downPaymentPercent = getValue('downPayment');
             const interestRateMonthly = getValue('interestRate') / 100 / 12;
             const loanTermMonths = getValue('loanTerm') * 12;
-            const insurance = getValue('insurance');
+            const insuranceAnnual = getValue('insurance');
             const taxType = document.getElementById('taxType').value;
             const growthRate = getValue('growthRate') / 100;
             let monthlyRent = getValue('monthlyRent');
@@ -114,26 +114,30 @@
 
             const downPayment = homePrice * (downPaymentPercent / 100);
             const loanAmount = homePrice - downPayment;
-            const monthlyPayment = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
+            const monthlyPrincipalInterest = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
+
+            // Taxes and insurance monthly
+            let yearlyTaxes = 0;
+            if (taxType === 'percent') {
+                yearlyTaxes = (getValue('propertyTaxes') / 100) * homePrice;
+            } else {
+                yearlyTaxes = getValue('propertyTaxes');
+            }
+            const monthlyTaxes = yearlyTaxes / 12;
+            const monthlyInsurance = insuranceAnnual / 12;
+            const monthlyMaintenance = (0.015 * homePrice) / 12;
+
+            const totalMonthlyHousingCost = monthlyPrincipalInterest + monthlyTaxes + monthlyInsurance;
 
             let totalBuyCost = downPayment;
             let totalRentCost = 0;
             let homeValue = homePrice;
-            let monthlyDifference = 0;
             let futureStockValue = 0;
 
             for (let i = 1; i <= years; i++) {
-                const yearlyMortgage = monthlyPayment * 12;
-
-                let yearlyTaxes = 0;
-                if (taxType === 'percent') {
-                    yearlyTaxes = (getValue('propertyTaxes') / 100) * homeValue;
-                } else {
-                    yearlyTaxes = getValue('propertyTaxes');
-                }
-
+                const yearlyMortgage = totalMonthlyHousingCost * 12;
                 const yearlyMaintenance = 0.015 * homeValue;
-                totalBuyCost += yearlyMortgage + yearlyTaxes + insurance + yearlyMaintenance;
+                totalBuyCost += yearlyMortgage + yearlyMaintenance;
 
                 homeValue *= (1 + growthRate);
                 totalRentCost += monthlyRent * 12;
@@ -145,9 +149,9 @@
             const equity = homeValue - loanAmount;
 
             const trueCostOfBuying = totalBuyCost - equity; // Real cost after equity gained
-            const netDifference = totalRentCost - trueCostOfBuying;
+            const netBenefit = totalRentCost - trueCostOfBuying;
 
-            monthlyDifference = monthlyPayment - averageMonthlyRent; // Difference between buying and renting monthly
+            const monthlyDifference = totalMonthlyHousingCost - averageMonthlyRent; // Difference between buying and renting monthly
 
             // Stock return simulation: only invest if renting is cheaper monthly
             if (monthlyDifference > 0) {
@@ -158,15 +162,15 @@
 
             document.getElementById('results').innerHTML = `
                 <strong>Renting Total Cost:</strong> $${formatNumber(totalRentCost)}<br>
-                <strong>Total Buying Cost:</strong> $${formatNumber(totalBuyCost)}<br>
-                <strong>Equity Gained From Buying:</strong> $${formatNumber(equity)}<br>
-                <strong>True Cost of Buying (after equity):</strong> $${formatNumber(trueCostOfBuying)}<br><br>
+                <strong>Total Buying Cost (Including Down Payment, Mortgage, Taxes, Insurance, Maintenance):</strong> $${formatNumber(totalBuyCost)}<br>
+                <strong>Equity You Own After ${years} Years:</strong> $${formatNumber(equity)}<br>
+                <strong>Your Net Spending on Buying (After Equity):</strong> $${formatNumber(trueCostOfBuying)}<br><br>
 
-                <strong>Net Difference:</strong> $${formatNumber(Math.abs(netDifference))} ${netDifference > 0 ? 'better to Buy' : 'better to Rent'}<br><br>
+                <strong>Net Benefit:</strong> $${formatNumber(Math.abs(netBenefit))} ${netBenefit > 0 ? 'Better to Buy' : 'Better to Rent'}<br><br>
 
-                <strong>Monthly Rent:</strong> $${formatNumber(averageMonthlyRent)}<br>
-                <strong>Estimated Mortgage Payment:</strong> $${formatNumber(monthlyPayment)}<br>
-                <strong>Monthly Difference (Mortgage - Rent):</strong> $${formatNumber(monthlyDifference)}<br><br>
+                <strong>Average Monthly Rent:</strong> $${formatNumber(averageMonthlyRent)}<br>
+                <strong>Estimated Monthly Housing Cost (PITI):</strong> $${formatNumber(totalMonthlyHousingCost)}<br>
+                <strong>Monthly Difference (PITI - Rent):</strong> $${formatNumber(monthlyDifference)}<br><br>
 
                 If you rented and invested $${formatNumber(monthlyDifference)} per month at 7% annual return,<br>
                 you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.
@@ -182,6 +186,3 @@
 </body>
 </html>
 
-
-</body>
-</html>
