--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rent vs Buy Calculator | Chris Garrard Realty</title>
+    <title>Rent vs Buy & Sell Calculator | Chris Garrard Realty</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,7 +48,7 @@
 </head>
 <body>
 
-    <h1>Rent vs Buy Calculator</h1>
+    <h1>Rent vs Buy & Sell in 5 Years</h1>
     <p style="text-align:center;">Helping Families Make Smart Financial Decisions About Homeownership</p>
 
     <label>Home Purchase Price ($):</label>
@@ -63,12 +63,8 @@
     <label>Loan Term (years):</label>
     <input type="number" id="loanTerm" value="30">
 
-    <label>Annual Property Taxes:</label>
+    <label>Annual Property Taxes (% of Home Value):</label>
     <input type="number" id="propertyTaxes" value="0.5">
-    <select id="taxType">
-        <option value="percent">Percent of Home Value (%)</option>
-        <option value="fixed">Fixed Amount ($)</option>
-    </select>
 
     <label>Annual Home Insurance ($):</label>
     <input type="number" id="insurance" value="1500">
@@ -103,81 +99,61 @@
             const downPaymentPercent = getValue('downPayment');
             const interestRateMonthly = getValue('interestRate') / 100 / 12;
             const loanTermMonths = getValue('loanTerm') * 12;
+            const propertyTaxesPercent = getValue('propertyTaxes') / 100;
             const insuranceAnnual = getValue('insurance');
-            const taxType = document.getElementById('taxType').value;
             const growthRate = getValue('growthRate') / 100;
             let monthlyRent = getValue('monthlyRent');
             const rentIncrease = getValue('rentIncrease') / 100;
             const years = getValue('years');
-            const annualStockReturn = 0.07;
-            const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
+            const sellingCostPercent = 0.07; // 7% selling costs
 
             const downPayment = homePrice * (downPaymentPercent / 100);
             const loanAmount = homePrice - downPayment;
             const monthlyPrincipalInterest = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
-
-            // Taxes and insurance monthly
-            let yearlyTaxes = 0;
-            if (taxType === 'percent') {
-                yearlyTaxes = (getValue('propertyTaxes') / 100) * homePrice;
-            } else {
-                yearlyTaxes = getValue('propertyTaxes');
-            }
-            const monthlyTaxes = yearlyTaxes / 12;
             const monthlyInsurance = insuranceAnnual / 12;
-            const monthlyMaintenance = (0.015 * homePrice) / 12;
-
-            const totalMonthlyHousingCost = monthlyPrincipalInterest + monthlyTaxes + monthlyInsurance;
 
             let totalBuyCost = downPayment;
             let totalRentCost = 0;
             let homeValue = homePrice;
-            let futureStockValue = 0;
+            let remainingLoan = loanAmount;
 
             for (let i = 1; i <= years; i++) {
-                const yearlyMortgage = totalMonthlyHousingCost * 12;
+                const yearlyMortgage = monthlyPrincipalInterest * 12;
+                const yearlyTaxes = propertyTaxesPercent * homeValue;
                 const yearlyMaintenance = 0.015 * homeValue;
-                totalBuyCost += yearlyMortgage + yearlyMaintenance;
+                totalBuyCost += yearlyMortgage + yearlyTaxes + insuranceAnnual + yearlyMaintenance;
 
                 homeValue *= (1 + growthRate);
                 totalRentCost += monthlyRent * 12;
                 monthlyRent *= (1 + rentIncrease);
+
+                // Loan amortization (simple approximation)
+                remainingLoan = remainingLoan * Math.pow(1 + interestRateMonthly, 12) - (monthlyPrincipalInterest * ((Math.pow(1 + interestRateMonthly, 12) - 1) / interestRateMonthly));
             }
 
-            const averageAnnualRent = totalRentCost / years;
-            const averageMonthlyRent = averageAnnualRent / 12;
-            const equity = homeValue - loanAmount;
-
-            const trueCostOfBuying = totalBuyCost - equity; // Real cost after equity gained
-            const netBenefit = totalRentCost - trueCostOfBuying;
-
-            const monthlyDifference = totalMonthlyHousingCost - averageMonthlyRent; // Difference between buying and renting monthly
-
-            // Stock return simulation: only invest if renting is cheaper monthly
-            if (monthlyDifference > 0) {
-                for (let m = 0; m < years * 12; m++) {
-                    futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
-                }
-            }
+            const sellingCosts = homeValue * sellingCostPercent;
+            const proceedsAfterSale = homeValue - remainingLoan - sellingCosts;
+            const netProfitFromBuying = proceedsAfterSale - totalBuyCost;
 
             document.getElementById('results').innerHTML = `
-                <strong>Renting Total Cost:</strong> $${formatNumber(totalRentCost)}<br>
+                <strong>Renting Total Cost Over ${years} Years:</strong> $${formatNumber(totalRentCost)}<br><br>
+
                 <strong>Total Buying Cost (Including Down Payment, Mortgage, Taxes, Insurance, Maintenance):</strong> $${formatNumber(totalBuyCost)}<br>
-                <strong>Equity You Own After ${years} Years:</strong> $${formatNumber(equity)}<br>
-                <strong>Your Net Spending on Buying (After Equity):</strong> $${formatNumber(trueCostOfBuying)}<br><br>
+                <strong>Estimated Home Value After ${years} Years:</strong> $${formatNumber(homeValue)}<br>
+                <strong>Remaining Loan Balance:</strong> $${formatNumber(remainingLoan)}<br>
+                <strong>Estimated Selling Costs (7%):</strong> $${formatNumber(sellingCosts)}<br>
+                <strong>Cash You'd Pocket After Selling:</strong> $${formatNumber(proceedsAfterSale)}<br><br>
 
-                <strong>Net Benefit:</strong> $${formatNumber(Math.abs(netBenefit))} ${netBenefit > 0 ? 'Better to Buy' : 'Better to Rent'}<br><br>
+                <strong>Net Profit or Loss From Buying & Selling:</strong> $${formatNumber(netProfitFromBuying)}<br><br>
 
-                <strong>Average Monthly Rent:</strong> $${formatNumber(averageMonthlyRent)}<br>
-                <strong>Estimated Monthly Housing Cost (PITI):</strong> $${formatNumber(totalMonthlyHousingCost)}<br>
-                <strong>Monthly Difference (PITI - Rent):</strong> $${formatNumber(monthlyDifference)}<br><br>
-
-                If you rented and invested $${formatNumber(monthlyDifference)} per month at 7% annual return,<br>
-                you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.
+                <strong>Final Comparison:</strong> <br>
+                Renting costs you $${formatNumber(totalRentCost)} with $0 return.<br>
+                Buying gives you $${formatNumber(netProfitFromBuying > 0 ? netProfitFromBuying : 0)} back after selling.<br>
+                <strong>${netProfitFromBuying > 0 ? 'Buying is better!' : 'Renting is cheaper over this time period.'}</strong>
             `;
         }
 
-        document.querySelectorAll('input, select').forEach(el => {
+        document.querySelectorAll('input').forEach(el => {
             el.addEventListener('input', calculate);
         });
         window.onload = calculate;
