--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             margin-top: 15px;
             font-weight: bold;
         }
-        input, select {
+        input {
             width: 100%;
             padding: 8px;
             margin-top: 5px;
@@ -49,7 +49,7 @@
 <body>
 
     <h1>Rent vs Buy & Sell in 5 Years</h1>
-    <p style="text-align:center;">Helping Families Make Smart Financial Decisions About Homeownership</p>
+    <p style="text-align:center;">Which Puts More Money in Your Pocket?</p>
 
     <label>Home Purchase Price ($):</label>
     <input type="number" id="homePrice" value="300000">
@@ -62,12 +62,6 @@
 
     <label>Loan Term (years):</label>
     <input type="number" id="loanTerm" value="30">
-
-    <label>Annual Property Taxes (% of Home Value):</label>
-    <input type="number" id="propertyTaxes" value="0.5">
-
-    <label>Annual Home Insurance ($):</label>
-    <input type="number" id="insurance" value="1500">
 
     <label>Annual Property Value Growth (%):</label>
     <input type="number" id="growthRate" value="2">
@@ -99,8 +93,6 @@
             const downPaymentPercent = getValue('downPayment');
             const interestRateMonthly = getValue('interestRate') / 100 / 12;
             const loanTermMonths = getValue('loanTerm') * 12;
-            const propertyTaxesPercent = getValue('propertyTaxes') / 100;
-            const insuranceAnnual = getValue('insurance');
             const growthRate = getValue('growthRate') / 100;
             let monthlyRent = getValue('monthlyRent');
             const rentIncrease = getValue('rentIncrease') / 100;
@@ -110,46 +102,36 @@
             const downPayment = homePrice * (downPaymentPercent / 100);
             const loanAmount = homePrice - downPayment;
             const monthlyPrincipalInterest = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
-            const monthlyInsurance = insuranceAnnual / 12;
 
-            let totalBuyCost = downPayment;
             let totalRentCost = 0;
             let homeValue = homePrice;
             let remainingLoan = loanAmount;
 
             for (let i = 1; i <= years; i++) {
-                const yearlyMortgage = monthlyPrincipalInterest * 12;
-                const yearlyTaxes = propertyTaxesPercent * homeValue;
-                const yearlyMaintenance = 0.015 * homeValue;
-                totalBuyCost += yearlyMortgage + yearlyTaxes + insuranceAnnual + yearlyMaintenance;
-
                 homeValue *= (1 + growthRate);
                 totalRentCost += monthlyRent * 12;
                 monthlyRent *= (1 + rentIncrease);
 
-                // Loan amortization (simple approximation)
+                // Loan amortization approximation for 1 year
                 remainingLoan = remainingLoan * Math.pow(1 + interestRateMonthly, 12) - (monthlyPrincipalInterest * ((Math.pow(1 + interestRateMonthly, 12) - 1) / interestRateMonthly));
             }
 
             const sellingCosts = homeValue * sellingCostPercent;
-            const proceedsAfterSale = homeValue - remainingLoan - sellingCosts;
-            const netProfitFromBuying = proceedsAfterSale - totalBuyCost;
+            const cashAfterSale = homeValue - remainingLoan - sellingCosts;
 
             document.getElementById('results').innerHTML = `
                 <strong>Renting Total Cost Over ${years} Years:</strong> $${formatNumber(totalRentCost)}<br><br>
 
-                <strong>Total Buying Cost (Including Down Payment, Mortgage, Taxes, Insurance, Maintenance):</strong> $${formatNumber(totalBuyCost)}<br>
                 <strong>Estimated Home Value After ${years} Years:</strong> $${formatNumber(homeValue)}<br>
                 <strong>Remaining Loan Balance:</strong> $${formatNumber(remainingLoan)}<br>
                 <strong>Estimated Selling Costs (7%):</strong> $${formatNumber(sellingCosts)}<br>
-                <strong>Cash You'd Pocket After Selling:</strong> $${formatNumber(proceedsAfterSale)}<br><br>
+                <strong>Cash You’d Pocket After Selling:</strong> <strong>$${formatNumber(cashAfterSale)}</strong><br><br>
 
-                <strong>Net Profit or Loss From Buying & Selling:</strong> $${formatNumber(netProfitFromBuying)}<br><br>
-
-                <strong>Final Comparison:</strong> <br>
+                <strong>Final Comparison:</strong><br>
                 Renting costs you $${formatNumber(totalRentCost)} with $0 return.<br>
-                Buying gives you $${formatNumber(netProfitFromBuying > 0 ? netProfitFromBuying : 0)} back after selling.<br>
-                <strong>${netProfitFromBuying > 0 ? 'Buying is better!' : 'Renting is cheaper over this time period.'}</strong>
+                Buying puts <strong>$${formatNumber(cashAfterSale)}</strong> in your pocket after ${years} years.<br><br>
+
+                <strong>${cashAfterSale > totalRentCost ? 'Buying is better!' : 'Renting is cheaper in this time frame.'}</strong>
             `;
         }
 
@@ -161,4 +143,5 @@
 
 </body>
 </html>
+
 
